--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         if (self.dropDownVisible() == false) {
           return;
         }
-        if (event.keyCode == 13) {
+        if (event.keyCode == 13 || event.keyCode == 9) {
           self.completeCurrentItem();
           return false;
         } else if (event.keyCode == 38) {
@@ -130,7 +130,7 @@
       };
 
       element.on("keyup", function(event) {
-          if (event.keyCode == 13 || event.keyCode == 38 || event.keyCode == 40) {
+          if (event.keyCode == 13 || event.keyCode == 9 || event.keyCode == 38 || event.keyCode == 40) {
             return;
           }
           var completion = self.currentCompletion();
